<resources>
    <string name="app_name">Workout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="plash_screen_title">GYM ROOM\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">John Doe</string>

    <!-- Navigation Texts -->
    <string name="exercises">Exercise</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="nutrition">Nutrition</string>
    <!-- Exercise Name -->
    <string name="bicep_curls">Bicep Curls</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="bench_press">Bench Press</string>
    <string name="bent_over_row">Bentover Row</string>
    <string name="tricep">Triceps Extension</string>
    <string name="lunge">Front Lunge</string>
    <string name="squat">Squat</string>
    <string name="romanian_deadlift">Romanian Deadlift</string>
    <string name="calf_raise">Calf Raise</string>

    <!-- Equipment -->
    <string name="dumbell">Dumbbell</string>
    <string name="barbell">Barbell</string>
    <string name="leg_press">Leg Press</string>

    <string name="workout_schedule">Schedule Workouts</string>
    <!--WEEKDAY -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>