<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.workout.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_addExerciseFragment"
            app:destination="@id/addExerciseFragment" />
        <action
            android:id="@+id/action_navigation_home_to_customMultiSelectionDialog"
            app:destination="@id/customMultiSelectionDialog" />
        <action
            android:id="@+id/action_navigation_home_to_nutritionFragment"
            app:destination="@id/navigation_nutrition" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.workout.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_dashboard_to_addExerciseFragment"
            app:destination="@id/addExerciseFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_dashboard_to_homeActivity"
            app:destination="@id/homeActivity" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.workout.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/addExerciseFragment"
        android:name="com.example.workout.AddExerciseFragment"
        android:label="fragment_add_exercise"
        tools:layout="@layout/fragment_add_exercise" >
        <action
            android:id="@+id/action_addExerciseFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_addExerciseFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <activity
        android:id="@+id/homeActivity"
        android:name="com.example.workout.HomeActivity"
        android:label="activity_home"
        tools:layout="@layout/activity_home" />
    <activity
        android:id="@+id/customMultiSelectionDialog"
        android:name="com.example.workout.ui.home.CustomMultiSelectionDialog"
        android:label="activity_custom_multi_selection_dialog"
        tools:layout="@layout/activity_custom_multi_selection_dialog" />
    <fragment
        android:id="@+id/navigation_nutrition"
        android:name="com.example.workout.ui.nutrition.NutritionFragment"
        android:label="fragment_nutrition"
        tools:layout="@layout/fragment_nutrition" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.workout.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>